added fontsize to over all pages

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -9,28 +9,28 @@
         <div class="spaces-1"></div>
         <!--Hero Block-->
         <div class="container-hero mx-auto">
-            <h1 id="" class="active-size aw text-wht text-center">
+            <h1 class="active-size aw text-wht text-center">
                 Focus Fitness
             </h1>
-            <p class="lead text-wht text-center">
-                A Community that is Focused on Fitness
-            </p>
+            <h2 class="aw text-wht mx-auto text-center">
+                Dont Just Live. Thrive!
+            </h2>
             <div class="row d-flex justify-content-center">
-                <div class="col-md-3 col-6 d-flex d-flex justify-content-center no-gutters">
+                <div class=" col-12 d-flex d-flex justify-content-center no-gutters">
                     <a class="ripple-surface hero-btn btn btn-danger btn-lg aw text-wht m-1 border border-white"
                         href="{% url 'account_signup' %}" role="button">Join Up</a>
 
                 </div>
-                <div class="col-md-3 col-6 d-flex d-flex justify-content-center no-gutters">
+                <div class=" col-6 d-flex d-flex justify-content-center no-gutters">
                     <a class="ripple-surface hero-btn btn btn-primary btn-lg aw text-wht m-1 border border-white"
                         href="{% url 'products' %}" role="button">Shop
                     </a>
                 </div>
-                <div class="col-md-3 col-6 d-flex d-flex justify-content-center no-gutters">
+                <div class=" col-6 d-flex d-flex justify-content-center no-gutters">
                     <a class="ripple-surface hero-btn btn btn-warning btn-lg aw text-wht m-1 border border-white"
                         href="{% url 'blog:list' %}" role="button">Blog</a>
                 </div>
-                <div class="col-md-3 col-6 d-flex d-flex justify-content-center no-gutters">
+                <div class="mb-2 col-12 d-flex d-flex justify-content-center no-gutters">
                     <a class="ripple-surface hero-btn btn btn-success btn-lg aw text-wht m-1 border border-white"
                         href="{% url 'account_login' %}" role="button">Login</a>
                 </div>
@@ -108,7 +108,7 @@
     <!--Special offers-->
     <div class="container-fluid mt-4">
         <h2 class="aw active-size text-center">SPECIAL OFFERS</h2>
-        <h4 class="aw text-center mb-5">Look your Best and Feel even Better</h4>
+        <h4 class="aw text-center mb-5">Look your Best. Feel even Better</h4>
     </div>
 
     <div class="row ">
