--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,10 +4,12 @@ html {
   height: 100%;
   width: 100%;
   overflow-x: hidden;
+
 }
 
 body {
   margin-top: 8rem;
+
 }
 
 .crumbs {
@@ -18,6 +20,7 @@ p {
   font-family: "montserrat", sans-serif;
   font-weight: 400;
   max-width: 600px;
+  font-size: 1.125em;
 }
 
 ul {
@@ -305,7 +308,7 @@ nav {
 #section1-pic {
   position: relative;
   top: 0px;
-  height: 100vh;
+  height: 70vh;
   background: url(/static/images/hipcravo-index-unsplash.jpg) no-repeat center center scroll;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -317,11 +320,11 @@ nav {
 
 .container-hero {
   background-color: rgba(0, 0, 0, 0.7);
-  margin-top: 7rem;
+  margin-top: 3rem;
   margin-bottom: 8rem;
 
   height: fit-content;
-  width: 70%;
+  width: 90%;
   border-radius: 30px;
   -webkit-border-radius: 30px;
   -moz-border-radius: 30px;
@@ -329,12 +332,8 @@ nav {
   -o-border-radius: 30px;
 }
 
-#hero-heading {
-  font-size: 8vw;
-}
-
 .active-size {
-  font-size: 7.5vw;
+  font-size: 11.5vw;
 }
 
 .hero-btn {
@@ -378,7 +377,7 @@ nav {
 
 .feature-container {
   position: relative;
-  width: 80%;
+  width: 90%;
   margin-right: auto;
   margin-left: auto;
   margin-top: -5rem;
@@ -766,4 +765,52 @@ nav {
   100% {
     background-position: left;
   }
+}
+
+
+
+@media (min-width: 576px) {
+  .active-size {
+    font-size: 10vw;
+  }
+}
+
+@media (max-width: 576px) {
+  .container {
+    padding-left: 1px;
+    padding-right: 1px;
+  }
+}
+
+@media (min-width: 768px) {
+  .active-size {
+    font-size: 7vw;
+  }
+
+  .feature-container {
+    width: 80%;
+  }
+
+  .container-hero {
+    width: 80%;
+
+  }
+}
+
+@media (min-width: 992px) {
+  .active-size {
+    font-size: 5vw;
+  }
+
+  .feature-container {
+    width: 70%;
+  }
+}
+
+@media (min-width: 1200px) {
+  .active-size {
+    font-size: 5vw;
+  }
+
+
 }
