--- a/static/css/style.css
+++ b/static/css/style.css
@@ -31,7 +31,9 @@ img {
   object-fit: cover;
 }
 
-
+.display-4 {
+  font-size: 3.0rem;
+}
 
 
 .message {
@@ -221,7 +223,7 @@ img {
   top: 0px;
   right: 0px;
   z-index: 999999;
-  font-size: 1.35rem;
+  font-size: 1.125rem;
 }
 
 .btt-button {
@@ -275,6 +277,7 @@ nav {
 .nav-link {
   display: inline !important;
   padding: 0.5rem 1rem;
+  font-size: 1.125rem;
 }
 
 #topnav {
@@ -308,7 +311,7 @@ nav {
 #section1-pic {
   position: relative;
   top: 0px;
-  height: 70vh;
+  height: 80vh;
   background: url(/static/images/hipcravo-index-unsplash.jpg) no-repeat center center scroll;
   -webkit-background-size: cover;
   -moz-background-size: cover;
