--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -31,8 +31,13 @@
                         href="{% url 'blog:list' %}" role="button">Blog</a>
                 </div>
                 <div class="mb-2 col-12 d-flex d-flex justify-content-center no-gutters">
+                    {% if request.user.is_authenticated %}
+                    <a class="ripple-surface hero-btn btn btn-success btn-lg aw text-wht m-1 border border-white"
+                        href="{% url 'account_logout' %}" role="button">Logout</a>
+                    {% else %}
                     <a class="ripple-surface hero-btn btn btn-success btn-lg aw text-wht m-1 border border-white"
                         href="{% url 'account_login' %}" role="button">Login</a>
+                    {% endif %}
                 </div>
             </div>
         </div>
