added breadcrums to programs dash and started shop

--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -10,6 +10,17 @@
 
 
 <div class="empty-pic ">
+    <div class="container ">
+        <div class="row">
+            <div class="col-md-12 mb-0">
+                <a class="text-wht aw pl-2" href="{% url 'home' %}">Home</a>
+                <span class="mx-2 mb-0 text-wht">/</span>
+                <a class="text-wht aw pl-2" href="{% url 'profile' %}">Dashboard</a>
+                <span class="mx-2 mb-0 text-wht">/</span>
+                <small class="text-wht aw">{% trans "Password Reset" %}</small>
+            </div>
+        </div>
+    </div>
     <div class="container about">
         <div class="overlay">
             <div class="col p-4">
