--- a/static/css/style.css
+++ b/static/css/style.css
@@ -446,6 +446,7 @@ nav {
 .overlay {
   position: relative;
   height: fit-content;
+  top: -65px;
   background-color: rgba(0, 0, 0, 0.7);
   border-radius: 20px;
   -webkit-border-radius: 20px;
