--- a/templates/products/products_detail.html
+++ b/templates/products/products_detail.html
@@ -2,20 +2,18 @@
 {% load static %}
 {% block content %}
 
-<div class="container-fluid bg-black fixed-top crumbs">
-    <div class="row">
-        <div class="col-md-12 mb-0">
-            <a class="text-wht aw" href="{% url 'home' %}">Home</a>
-            <span class="mx-2 mb-0 text-wht">/</span>
-            <a class="text-wht aw" href="{% url 'products' %}">Shop</a>
-            <span class="mx-2 mb-0 text-wht">/</span>
-            <strong class="text-wht aw">Details</strong>
-        </div>
-    </div>
-</div>
-
 <div class="container-fluid product-overlay">
+
     <div class="container">
+        <div class="container ">
+            <div class="row">
+                <div class="col-md-12 mb-0">
+                    <a class="text-bk aw pl-2" href="{% url 'products' %}">Shop</a>
+                    <span class="mx-2 mb-0 text-bk">/</span>
+                    <small class="text-bk aw">Product</small>
+                </div>
+            </div>
+        </div>
         <div class="row ">
             <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
                 <div class="image-container my-5">
