--- a/templates/programs/program_detail.html
+++ b/templates/programs/program_detail.html
@@ -10,7 +10,7 @@
             <div class="col-md-12 mb-0">
                 <a class="text-wht aw pl-2" href="{% url 'programs:list' %}">Programs</a>
                 <span class="mx-2 mb-0 text-wht">/</span>
-                <small class="text-wht aw">Dashboard</small>
+                <small class="text-wht aw">{{ object.title }}</small>
             </div>
         </div>
     </div>
