--- a/templates/blog/blog_list.html
+++ b/templates/blog/blog_list.html
@@ -12,6 +12,8 @@
             <span class="mx-2 mb-0 text-wht">/</span>
             <a class="text-wht aw pl-2" href="{% url 'blog:create' %}">Create Blog</a>
             {% else %}
+            <span class="mx-2 mb-0 text-wht">/</span>
+            <a class="text-wht aw pl-2" href="{% url 'blog:create' %}">Create Blog</a>
             {% endif %}
         </div>
     </div>
