--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -3,16 +3,16 @@
 
 
 {% block content %}
-<div class="container-fluid bg-black fixed-top crumbs">
-    <div class="row">
-        <div class="col-md-12 mb-0">
-            <a class="text-wht aw pl-2" href="{% url 'home' %}">Home</a>
-            <span class="mx-2 mb-0 text-wht">/</span>
-            <strong class="text-wht aw">About</strong>
+<div id="about-pic">
+    <div class="container ">
+        <div class="row">
+            <div class="col-md-12 mb-0">
+                <a class="text-wht aw pl-2" href="{% url 'home' %}">Home</a>
+                <span class="mx-2 mb-0 text-wht">/</span>
+                <small class="text-wht aw">About</small>
+            </div>
         </div>
     </div>
-</div>
-<div id="about-pic">
     <div class="container about">
         <div class="overlay">
             <div class="col p-4">
