--- a/templates/base.html
+++ b/templates/base.html
@@ -62,16 +62,36 @@
     {% include "base_partials/_mini_cart.html" %}
 
 
-    {% include "messages/messages.html" %}
+    {% if messages %}
+    <div class="message-container">
+        {% for message in messages %}
+        {% with message.level as level %}
+        {% if level == 40 %}
+        {% include 'includes/toasts/toast_error.html' %}
+        {% elif level == 30 %}
+        {% include 'includes/toasts/toast_info.html' %}
+        {% elif level == 25 %}
+        {% include 'includes/toasts/toast_success.html' %}
+        {% else %}
+        {% include 'includes/toasts/toast_info.html' %}
+        {% endif %}
+
+        {% endwith %}
+        {% endfor %}
+    </div>
+    {% endif %}
 
     {% block content %}
     {% endblock content %}
+    {% include "base_partials/_footer.html" %}
+
 
     {% block postloadjs %}
-
+    <script type="text/javascript">
+        $('.toast').toast('show');
+    </script>
     {% endblock postloadjs %}
     <!--footer-->
-    {% include "base_partials/_footer.html" %}
 
 </body>
 
