--- a/templates/blog/blog_categories.html
+++ b/templates/blog/blog_categories.html
@@ -2,29 +2,16 @@
 
 
 {% block content %}
-<div class="container-fluid bg-black fixed-top fixed-top crumbs">
-    <div class="row">
-        <div class="col-md-12 mb-0">
-            <a class="text-wht aw pl-2" href="{% url 'home' %}">Home</a>
-            <span class="mx-2 mb-0 text-wht">/</span>
-            <strong class="text-wht aw">Blogs</strong>
-            {% if request.user.is_authenticated %}
-            <span class="mx-2 mb-0 text-wht">/</span>
-            <a class="text-wht aw pl-2" href="{% url 'blog:create' %}">Create Blog</a>
-            {% else %}
-            {% endif %}
-        </div>
-    </div>
-</div>
+
 {% if category_blogs %}
 <!-- Page Content -->
 <div class="container-fluid blog-pic">
     <div class="row mx-4">
         <!-- Blog Entries Column -->
         <div class="col-md-8">
-            <div class="overlay">
-                <h1 class="my-4 aw text-wht text-center">{{ category }} Blogs</h1>
-            </div>
+
+            <h1 class="my-4 aw text-wht text-center">{{ category }} Blogs</h1>
+
 
             {% for blog in category_blogs %}
             <!-- Blog Post -->
@@ -68,51 +55,51 @@
 <div class="col-md-4">
 
     <!-- Search Widget -->
-    <div class="card my-4">
-        <h5 class="aw card-header">Search</h5>
-        <div class="card-body">
+    <div id="blog-side-card" class="card my-4">
+        <!-- <h5 class="aw text-wht bg-green text-center card-header">Search</h5> -->
+        <div class="card-body mx-auto ">
             <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search for...">
-                <span class="input-group-append">
-                    <button class="aw  btn btn-secondary" type="button">Go!</button>
-                </span>
+                <form method="GET" action="{% url 'blog:list' %}" class="form-inline my-2 my-lg-0">
+                    <input class="aw form-control mr-sm-2" name="s" type="search" placeholder="Search Blogs"
+                        aria-label="Search">
+                    <button class="aw btn btn-success my-2 my-sm-0" type="submit">Go!</button>
+                </form>
             </div>
         </div>
-    </div>
 
-    <!-- Categories Widget -->
-    <div class="card my-4">
-        <h5 class="aw card-header">Categories</h5>
-        <div class="card-body">
-            <div class="row">
-                <div class="col-lg-6">
-                    <ul class="list-unstyled mb-0">
-                        {% for item in category_menu %}
-                        <a class="dropdown-item aw" href="{% url 'blog:category' item %}">{{ item }}</a>
-                        {% endfor %}
+        <!-- Categories Widget -->
+        <div class="card my-4">
+            <h5 class="aw text-center card-header bg-green">Categories</h5>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <ul class="list-unstyled mb-0">
+                            {% for item in category_menu %}
+                            <a class=" dropdown-item aw" href="{% url 'blog:category' item %}">{{ item }}</a>
+                            {% endfor %}
+                        </ul>
+                    </div>
 
-                    </ul>
                 </div>
-
             </div>
         </div>
-    </div>
-    <!-- Side Widget -->
-    <div class="card my-4 ">
-        <h5 class="aw card-header text-bk text-center">All Blogs</h5>
-        {% for blog in all_blogs %}
-        {% if blog.category != category %}
-        <div class="card-body ">
-            <a class="text-bk" href="{{ object.get_absolute_url }}">
-                <h5 class="aw text-center ">{{ blog.title|title }}</h5>
-                <a href="{% url 'blog:category' blog.category %}"><small class="text-muted">Category:
-                        {{ blog.category }}</small></a>
-                <p class="text-bk">{{ blog.content|safe|truncatechars:50 }}</p>
-            </a>
+        <!-- Side Widget -->
+        <div class="card my-4 ">
+            <h5 class="aw bg-yellow  card-header text-bk text-center">All Blogs</h5>
+            {% for blog in all_blogs %}
+            {% if blog.featured != True %}
+            <div class="card-body ">
+                <a class="text-bk" href="{{ blog.get_absolute_url }}">
+                    <h5 class="aw text-center ">{{ blog.title|title }}</h5>
+                    <a href="{% url 'blog:category' blog.category %}"><small class="text-muted">Category:
+                            {{ blog.category }}</small></a>
+                    <p class="text-bk">{{ blog.content|safe|truncatechars:50 }}</p>
+                </a>
+            </div>
+            <hr>
+            {% endif %}
+            {% endfor %}
         </div>
-        <hr>
-        {% endif %}
-        {% endfor %}
     </div>
 </div>
 {% else %}
