--- a/static/css/members_checkout.css
+++ b/static/css/members_checkout.css
@@ -35,7 +35,7 @@ button {
     text-decoration: none;
     -webkit-transition: all 150ms ease;
     transition: all 150ms ease;
-    float: left;
+
     margin-left: 12px;
     margin-top: 28px;
 }
@@ -58,11 +58,11 @@ label {
     margin-bottom: 8px;
 }
 
-#card-errors {
+/* #card-errors {
     height: 20px;
     padding: 4px 0;
     color: #fa755a;
-}
+} */
 
 .form-row {
     width: 70%;
