--- a/templates/memberships/membership_payment.html
+++ b/templates/memberships/membership_payment.html
@@ -3,7 +3,7 @@
 
 
 {% block content %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/members_checkout.css' %}">
+<!-- <link rel="stylesheet" type="text/css" href="{% static 'css/members_checkout.css' %}"> -->
 
 <div class="container-fluid bg-black fixed-top crumbs">
     <div class="row">
@@ -16,114 +16,38 @@
 </div>
 <div id="profile-pic">
     <div class="container profile">
-        <div class="profile-overlay">
+        <div class="alpha-overlay">
             <div class="col p-4">
                 <h4 class="text-wht aw display-4 text-center">Membership Payments</h4>
             </div>
-        </div>
-        <div class="row">
-            <p class="col-12 aw text-wht">Selected membership: {{ selected_membership }}</p>
 
-            <p class="col-12 aw text-wht">Price: ${{ selected_membership.price }}<small> /Month</small>
-            </p>
-        </div>
+            <div class="row">
+                <p class="col-12 aw text-wht text-center">You are about to subscribe to a</p>
+                <p class="col-12 aw text-grn text-center"> {{ selected_membership }} @
+                    ${{ selected_membership.price }}<small> /Month</small></p>
+            </div>
 
-        <button onclick="toggleDisplay();" class="btn btn-warning w-50" style="width: 100%;">Checkout with a credit
-            card</button>
-
-        <div id="collapseStripe" class="wrapper">
-            <script src="https://js.stripe.com/v3/"></script>
-
-            <!-- can't do this -->
-            <!-- <script src="{% static 'js/stripeV3.js' %}"></script> -->
-
-            <form action="." method="post" id="payment-form">
+            <form action="." method="post" id="payment-form" class="pb-4">
                 {% csrf_token %}
-                <div id="checkoutMethods">
-                    <div style="margin: 10px;">
-                        <h2>Checkout with Braintree</h2>
-                        <div id="bt-dropin"></div>
-                        <h2>Checkout with Stripe</h2>
-                        <div class="form-row">
-                            <label for="card-element">
-                                Credit or debit card
-                            </label>
-                            <div id="card-element" class="StripeElement StripeElement--empty">
-                                <div class="__PrivateStripeElement"
-                                    style="margin: 0px !important; padding: 0px !important; border: none !important; display: block !important; background: transparent !important; position: relative !important; opacity: 1 !important;">
-                                    <iframe frameborder="0" allowtransparency="true" scrolling="no"
-                                        name="__privateStripeFrame3" allowpaymentrequest="true"
-                                        src="https://js.stripe.com/v3/elements-inner-card-8a434729e4eb82355db4882974049278.html#style[base][color]=%2332325d&amp;style[base][lineHeight]=18px&amp;style[base][fontFamily]=%22Helvetica+Neue%22%2C+Helvetica%2C+sans-serif&amp;style[base][fontSmoothing]=antialiased&amp;style[base][fontSize]=16px&amp;style[base][::placeholder][color]=%23aab7c4&amp;style[invalid][color]=%23fa755a&amp;style[invalid][iconColor]=%23fa755a&amp;componentName=card&amp;wait=false&amp;rtl=false&amp;features[noop]=false&amp;origin=https%3A%2F%2Fstripe.com&amp;referrer=https%3A%2F%2Fstripe.com%2Fdocs%2Fstripe-js%2Felements%2Fquickstart&amp;controllerId=__privateStripeController0"
-                                        title="Secure payment input frame"
-                                        style="border: none !important; margin: 0px !important; padding: 0px !important; width: 1px !important; min-width: 100% !important; overflow: hidden !important; display: block !important; height: 18px;"></iframe><input
-                                        class="__PrivateStripeElement-input" aria-hidden="true"
-                                        style="border: none !important; display: block !important; position: absolute !important; height: 1px !important; top: 0px !important; left: 0px !important; padding: 0px !important; margin: 0px !important; width: 100% !important; opacity: 0 !important; background: transparent !important; pointer-events: none !important; font-size: 16px !important;"><input
-                                        class="__PrivateStripeElement-safariInput" aria-hidden="true" tabindex="-1"
-                                        style="border: none !important; display: block !important; position: absolute !important; height: 1px !important; top: 0px !important; left: 0px !important; padding: 0px !important; margin: 0px !important; width: 100% !important; opacity: 0 !important; background: transparent !important; pointer-events: none !important; font-size: 16px !important;">
-                                </div>
-                            </div>
+                <fieldset class="px-3">
+                    <legend class="fieldset-label text-center text-wht text-black px-2 aw">Credit Card</legend>
+                    <!-- A Stripe card element will go here -->
+                    <div class="mb-3 w-50 mx-auto" id="card-element"></div>
+                    <!-- Used to display form errors -->
+                    <div class="mb-3 text-danger mx-auto" id="card-errors" role="alert"></div>
 
-                            <!-- Used to display form errors. -->
-                            <div id="card-errors" role="alert"></div>
-                        </div>
-                        <input type="hidden" id="nonce" name="payment_method_nonce" />
+                    <input type="hidden" id="nonce" name="payment_method_nonce" />
+                    <div class="row justify-content-center">
+                        <button class="aw btn btn-primary">Submit Payment</button>
                     </div>
-                </div>
-                <button>Submit Payment</button>
+                </fieldset>
             </form>
-
         </div>
-
-        <div id="stripe-token-handler" class="is-hidden">Success! Got token: <span class="token"></span></div>
-
     </div>
-
-    <!-- script for the stripe form -->
-    <script src="{% static 'js/checkout.js' %}"></script>
-
-
-
-    <script src="https://js.braintreegateway.com/web/dropin/1.13.0/js/dropin.min.js"></script>
-    <script>
-        var form = document.querySelector('#payment-form');
-        var client_token = '{{ client_token }}';
-
-        braintree.dropin.create({
-            authorization: client_token,
-            container: '#bt-dropin',
-            paypal: {
-                flow: 'vault'
-            }
-        }, function (createErr, instance) {
-            form.addEventListener('submit', function (event) {
-                event.preventDefault();
-
-                instance.requestPaymentMethod(function (err, payload) {
-                    if (err) {
-                        console.log('Error', err);
-                        return;
-                    }
-
-                    // Add the nonce to the form and submit
-                    document.querySelector('#nonce').value = payload.nonce;
-                    form.submit();
-                });
-            });
-        });
-    </script>
-
-    <!-- script for toggling display of the form -->
-    <script type="text/javascript">
-        function toggleDisplay() {
-            var x = document.getElementById("collapseStripe");
-            if (x.style.display === "none") {
-                x.style.display = "block";
-            } else {
-                x.style.display = "none";
-            }
-        };
-    </script>
-
 </div>
-</div>
+
+
+<!-- script for the stripe form -->
+<script src="{% static 'js/checkout.js' %}"></script>
+
 {% endblock content %}
