--- a/templates/checkout/checkout.html
+++ b/templates/checkout/checkout.html
@@ -113,34 +113,35 @@
                     </div>
                 </fieldset>
                 <fieldset class="px-3">
-                    <legend class="fieldset-label small text-black px-2 w-auto aw">Payment</legend>
+
+                    <i class="fab fa-stripe fa-2x"></i>
                     <!-- A Stripe card element will go here -->
-                    <div class="mb-3" id="card-element"></div>
+                    <div class="mb-2" id="card-element"></div>
                     <!-- Used to display form errors -->
-                    <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
+                    <div class="mb-2 text-danger" id="card-errors" role="alert"></div>
                     <!-- Pass the client secret to the view so we can get the payment intent id -->
                     <input type="hidden" value="{{ client_secret }}" name="client_secret">
+                    <div class="submit-button text-center mt-2 mb-2">
+                        <button id="submit-button" class="btn btn-success">
+                            <span class=" font-weight-bold">Complete Order</span>
+                            <span class="icon">
+                                <i class="fas fa-lock"></i>
+                            </span>
+                        </button>
+                        <a href="{% url 'cart_view' %}" class="btn btn-warning ">
+                            <span class="font-weight-bold">Adjust Bag</span>
+                            <span class="icon">
+                                <i class="fad fa-angle-double-right"></i>
+                            </span>
+                        </a>
+                        <p class="small text-danger my-0">
+                            <span class="icon">
+                                <i class="fas fa-exclamation-circle"></i>
+                            </span>
+                            <span>Your card will be charged <strong>${{ grand_total|floatformat:2 }}</strong></span>
+                        </p>
+                    </div>
                 </fieldset>
-                <div class="submit-button text-right mt-5 mb-2">
-                    <a href="{% url 'cart_view' %}" class="btn btn-outline-black ">
-                        <span class="icon">
-                            <i class="fas fa-chevron-left"></i>
-                        </span>
-                        <span class="font-weight-bold">Adjust Bag</span>
-                    </a>
-                    <button id="submit-button" class="btn btn-black ">
-                        <span class="font-weight-bold">Complete Order</span>
-                        <span class="icon">
-                            <i class="fas fa-lock"></i>
-                        </span>
-                    </button>
-                    <p class="small text-danger my-0">
-                        <span class="icon">
-                            <i class="fas fa-exclamation-circle"></i>
-                        </span>
-                        <span>Your card will be charged <strong>${{ grand_total|floatformat:2 }}</strong></span>
-                    </p>
-                </div>
             </form>
         </div>
     </div>
