--- a/templates/memberships/membership_list.html
+++ b/templates/memberships/membership_list.html
@@ -3,27 +3,30 @@
 
 
 {% block content %}
-<div class="container-fluid bg-black fixed-top crumbs">
-    <div class="row">
-        <div class="col-md-12 mb-0">
-            <a class="text-wht aw pl-2" href="{% url 'home' %}">Home</a>
-            <span class="mx-2 mb-0 text-wht">/</span>
-            <strong class="text-wht aw">Dashboard</strong>
+
+<div id="profile-pic">
+    <div class="container ">
+        <div class="row">
+            <div class="col-md-12 mb-0">
+                <a class="text-wht aw pl-2" href="{% url 'memberships:select-membership' %}">Dashboard</a>
+                <span class="mx-2 mb-0 text-wht">/</span>
+                <small class="text-wht aw">Memberships</small>
+            </div>
         </div>
     </div>
-</div>
-<div id="profile-pic">
     <div class="container profile">
         <div class="profile-overlay">
             <div class="col p-4">
                 <h4 class="text-wht aw display-4 text-center">Select a Membership</h4>
             </div>
         </div>
-        <div class="row">
-
+        <div class="row pb-5">
             {% for object in object_list %}
-            <div class="col-sm-6 col-md-6 bg-black-a rounded-15 p-2">
-                <h1 class="text-center aw text-wht">{{ object.membership_type }}</h1>
+            <div class="col-sm-6 col-md-6 bg-black-a rounded-15 p-2 pb-4">
+
+                <h1
+                    class="text-center aw {% if not forloop.counter|divisibleby:2  %} text-grn {% else %} text-ylw {% endif %} ">
+                    {{ object.membership_type }}</h1>
                 <p class="text-center aw text-wht">Price: ${{ object.price }}<small>/month</small></p>
                 <h4 class="text-center aw text-wht">Inclueds</h4>
                 <h5 class="aw text-wht">User DashBoard</h5>
@@ -56,7 +59,7 @@
                     <input type="hidden" name="membership_type" value="{{ object.membership_type }}">
                 </form>
                 {% else %}
-                <p class="text-center aw text-wht">Your Currnet Membership</p>
+
                 {% endif %}
 
             </div>
