--- a/templates/memberships/membership_payment.html
+++ b/templates/memberships/membership_payment.html
@@ -5,24 +5,25 @@
 {% block content %}
 <!-- <link rel="stylesheet" type="text/css" href="{% static 'css/members_checkout.css' %}"> -->
 
-<div class="container-fluid bg-black fixed-top crumbs">
-    <div class="row">
-        <div class="col-md-12 mb-0">
-            <a class="text-wht aw pl-2" href="{% url 'home' %}">Home</a>
-            <span class="mx-2 mb-0 text-wht">/</span>
-            <strong class="text-wht aw">Dashboard</strong>
+
+<div id="profile-pic">
+    <div class="container ">
+        <div class="row">
+            <div class="col-md-12 mb-0">
+                <a class="text-wht aw pl-2" href="{% url 'memberships:select-membership' %}">Memberships</a>
+                <span class="mx-2 mb-0 text-wht">/</span>
+                <small class="text-wht aw">Payment</small>
+            </div>
         </div>
     </div>
-</div>
-<div id="profile-pic">
     <div class="container profile">
         <div class="alpha-overlay">
             <div class="col p-4">
-                <h4 class="text-wht aw display-4 text-center">Membership Payments</h4>
+                <h1 class="text-wht aw text-center">Membership Payments</h1>
             </div>
 
             <div class="row">
-                <p class="col-12 aw text-wht text-center">You are about to subscribe to a</p>
+                <p class="col-12 aw text-wht text-center">You are about to subscribe to</p>
                 <p class="col-12 aw text-grn text-center"> {{ selected_membership }} @
                     ${{ selected_membership.price }}<small> /Month</small></p>
             </div>
@@ -31,19 +32,22 @@
                 {% csrf_token %}
                 <fieldset class="px-3">
                     <legend class="fieldset-label text-center text-wht text-black px-2 aw">Credit Card</legend>
+                    <i class="text-wht fab fa-stripe fa-2x"></i>
                     <!-- A Stripe card element will go here -->
-                    <div class="mb-3 w-50 mx-auto" id="card-element"></div>
+                    <div class="mb-3 w-auto mx-auto" id="card-element"></div>
                     <!-- Used to display form errors -->
                     <div class="mb-3 text-danger mx-auto" id="card-errors" role="alert"></div>
 
                     <input type="hidden" id="nonce" name="payment_method_nonce" />
                     <div class="row justify-content-center">
-                        <button class="aw btn btn-primary">Submit Payment</button>
+                        <button type="submit" class="sub aw btn btn-success"><i class="fad fa-lock-alt"></i>&nbsp;Submit
+                            Payment</button>
                     </div>
                 </fieldset>
             </form>
         </div>
     </div>
+    <div id="stripe-token-handler" class="is-hidden">Success! <span class="token"></span></div>
 </div>
 
 
