--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -86,7 +86,7 @@
     </div>
 
     <!--SubScribe banner-->
-    <div class="card my-5 py-5">
+    <div hidden class="card my-5 py-5">
         <div class="row no-gutters align-items-center">
             <div class="col-md-4 mx-auto" style="max-width: 300px;">
                 <img src="{% static 'images/womenblog-crop.jpg' %}" class="card-img bs-2" alt="...">
@@ -150,7 +150,7 @@
     <!--BLOG-->
     <div class="blog-image">
         <div class="container">
-            <h2 class="aw active-size text-center text-wht overlay mt-5 pt-4 pb-4">Feature Blogs</h2>
+            <h2 class="aw active-size text-center text-wht mt-5 pt-4 pb-4">Feature Blogs</h2>
             <div class="row ">
                 {% for blog in feature_blog %}
                 <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
@@ -167,7 +167,7 @@
                         <div class="card-footer bg-white pt-0 border-0 rounded-10 text-center">
                             <div class="row ">
                                 <div class="col">
-                                    <p class=" mb-0  aw">{{ blog.content|safe|truncatechars:200 }}</p>
+                                    <p class=" mb-0  aw">{{ blog.content|safe|truncatechars:100 }}</p>
 
                                     <i class="fad fa-star mr-1"></i>
                                     <small class="text-muted">{{ items.rating }}</small>
