--- a/templates/includes/toasts/toast_info.html
+++ b/templates/includes/toasts/toast_info.html
@@ -1,4 +1,5 @@
-<div class="toast custom-toast rounded-0 border-top-0" data-autohide="false">
+<div class="toast custom-toast rounded-0 border-top-0" data-autohide="false" data-autohide="true" data-delay="3000"
+    data-animation="true">
     <div class="arrow-up arrow-info"></div>
     <div class="w-100 toast-capper bg-info"></div>
     <div class="toast-header bg-white text-dark">
