--- a/static/css/style.css
+++ b/static/css/style.css
@@ -36,15 +36,7 @@ img {
   font-size: 3.0rem;
 }
 
-/* 
-.message {
-  position: absolute;
-  top: 3 rem;
-  left: 0px;
-  width: 100%;
-  z-index: 999;
 
-} */
 
 .alpha-overlay {
   position: relative;
@@ -511,13 +503,7 @@ nav {
 
 /*SHOP*/
 
-/* .container-shop {
-  background: url(/static/images/george-pagan-iii-gym-tag.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-} */
+
 
 
 .product-overlay {
@@ -798,14 +784,37 @@ nav {
 /* ------Messages  */
 .message-container {
   position: fixed;
-  top: 100px;
-  right: 15px;
+  top: 30px;
+  right: 30px;
   z-index: 999999999;
+
 }
 
-.custom-toast {
-  overflow: visible;
+
+
+.toast {
+  /*max-width: 350px;
+ */
+  /*overflow: hidden;
+ */
+  font-size: .875rem;
+  /*background-color: rgba(255,255,255,.85);
+ */
+  background-clip: padding-box;
+  /*border: 1px solid rgba(0,0,0,.1);
+ */
+  box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, .1);
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  opacity: 0;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
 }
+
+
 
 .toast-capper {
   height: 5px;
