--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -1,8 +1,8 @@
-<div class="toast custom-toast rounded-0 border-top-0" data-autohide="true" data-delay="3000" data-animation="true">
-    <div class="arrow-up arrow-success"></div>
+<div class="toast custom-toast" data-autohide="false" data-delay="3000" data-animation="true">
+
     <div class="w-100 toast-capper bg-success"></div>
-    <div class="toast-header bg-white text-dark">
-        <strong class="mr-auto">Success!</strong>
+    <div class="toast-header bg-green  text-wht">
+        <p class="aw mx-auto">Success!</p>
         <button type="button" class="ml-2 mb-1 close text-dark" data-dismiss="toast" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
