--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -1,4 +1,4 @@
-<div class="toast custom-toast" data-autohide="false" data-delay="3000" data-animation="true">
+<div class="toast custom-toast" data-autohide="true" data-delay="3000" data-animation="true">
 
     <div class="w-100 toast-capper bg-success"></div>
     <div class="toast-header bg-green  text-wht">
