--- a/templates/programs/program_list.html
+++ b/templates/programs/program_list.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-{% if request.user.is_authenticated %}
+
 <div id="profile-pic">
     <div class="container ">
         <div class="row">
@@ -24,17 +24,17 @@
         </div>
         <div class="container">
             <br>
-            {% for object in object_list  %}
+            {% for program in programs  %}
             {% if not forloop.counter|divisibleby:2  %}
             <div class="  mx-auto row featurette profile-overlay" style="max-width: 40rem;">
                 <div class="col-md-7 d-flex align-items-center text-wht">
-                    <a href="{{ object.get_absolute_url }}">
-                        <h5 class="text-center aw card-title text-wht">{{ object }}</h5>
-                        <p class="text-center card-text text-wht">{{ object.description|truncatechars:50 }}</p>
+                    <a href="{{ program.get_absolute_url }}">
+                        <h5 class="text-center aw card-title text-wht">{{ program.title }}</h5>
+                        <p class="text-center card-text text-wht">{{program.description|truncatechars:50 }}</p>
                     </a>
                 </div>
                 <div class="col-md-5 d-none d-md-block ">
-                    <img src="{{ object.thumbnail.url }}" class="card-img program-card" alt="...">
+                    <img src="{{ program.thumbnail.url }}" class="card-img program-card" alt="...">
                 </div>
             </div>
 
@@ -43,12 +43,12 @@
             {% else %}
             <div class="row  mx-auto featurette  profile-overlay" style="max-width: 40rem;">
                 <div class="col-md-5 d-none d-md-block">
-                    <img src="{{ object.thumbnail.url }}" class="card-img program-card" alt="...">
+                    <img src="{{program.thumbnail.url }}" class="card-img program-card" alt="...">
                 </div>
                 <div class="col-md-7 d-flex align-items-center">
-                    <a href="{{ object.get_absolute_url }}">
-                        <h5 class="text-center aw card-title text-wht">{{ object }}</h5>
-                        <p class="text-center card-text text-wht">{{ object.description|truncatechars:50 }}</p>
+                    <a href="{{program.get_absolute_url }}">
+                        <h5 class="text-center aw card-title text-wht">{{program }}</h5>
+                        <p class="text-center card-text text-wht">{{program.description|truncatechars:50 }}</p>
                     </a>
                 </div>
             </div>
@@ -59,6 +59,9 @@
         </div>
     </div>
 </div>
-{% endif %}
+
+
+
+
 
 {% endblock content %}
