added discount to checkout page and added to global context

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -61,6 +61,10 @@ img {
   padding-right: 0px;
 }
 
+.underline {
+  text-decoration: underline;
+}
+
 .aw {
   font-family: "audiowide", sans-serif;
 }
