--- a/templates/products/products.html
+++ b/templates/products/products.html
@@ -6,6 +6,17 @@
 <div class="container-shop ">
     <div class="container-fluid  blog-image">
         <div class="container">
+            <div class="container ">
+                <div class="row">
+                    <div class="col-md-12 mb-0">
+                        <a class="text-wht aw pl-2" href="{% url 'home' %}">Home</a>
+                        <span class="mx-2 mb-0 text-wht">/</span>
+                        <a class="text-wht aw pl-2" href="{% url 'cart_view' %}"><i
+                                class="fad fa-shopping-cart text-wht"></i> Cart</a>
+
+                    </div>
+                </div>
+            </div>
             <div class="row">
                 <div class="col text-center mt-3">
                     <h2 class="display-4 aw text-wht p-3">Products</h2>
