--- a/templates/checkout/checkout_success.html
+++ b/templates/checkout/checkout_success.html
@@ -3,7 +3,7 @@
 
 {% load static %}
 {% block extra_css %}
-<!-- <link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}"> -->
+
 {% endblock %}
 
 
@@ -54,7 +54,7 @@
                 {% if from_profile  %}
                 <p class="text-center ">Your order information is below. <br>
                     A confirmation email was send to {{ order.email }} <br>
-                    On {{ order.date }}</p>
+                    On {{ order.date|date:"D d M Y" }}</p>
                 {% else %}
 
                 <p class="text-center ">Your confirmation email has been sent to <br>{{  order.email }}</p>
@@ -79,7 +79,7 @@
                         <p class="mb-0 text-black aw">Date Ordered</p>
                     </div>
                     <div class="col-12 col-md-8 text-right">
-                        <p class="mb-0">{{ order.date }}</p>
+                        <p class="mb-0">{{ order.date|date:"D d M Y" }} }}</p>
                     </div>
                 </div>
 
@@ -116,7 +116,7 @@
                         <p class="mb-0 text-black aw aw">Full Name:</p>
                     </div>
                     <div class="col-12 col-md-8 text-right">
-                        <p class="mb-0">{{ order.full_name }}</p>
+                        <p class="mb-0">{{ order.full_name|title }}</p>
                     </div>
                 </div>
 
@@ -197,10 +197,26 @@
 
                 <div class="row">
                     <div class="col-12 col-md-4">
-                        <p class="mb-0 text-black aw">Order Total:</p>
+                        <p class="mb-0 text-black aw">Cart Total:</p>
                     </div>
                     <div class="col-12 col-md-8 text-right">
-                        <p class="mb-0 aw">{{ order.order_total }}</p>
+                        <p class="mb-0 aw">${{ order.order_total }}</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-md-4">
+                        <p class="mb-0 text-black aw">Discounts:</p>
+                    </div>
+                    <div class="col-12 col-md-8 text-right">
+                        <p class="mb-0 aw">${{ order.sub_discount }}</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-md-4">
+                        <p class="mb-0 text-black aw">TAX:<small class="text-muted"> 15%</small></p>
+                    </div>
+                    <div class="col-12 col-md-8 text-right">
+                        <p class="mb-0 aw">${{ order.tax }}</p>
                     </div>
                 </div>
 
@@ -209,7 +225,7 @@
                         <p class="mb-0 aw">Delivery:</p>
                     </div>
                     <div class="col-12 col-md-8 text-right">
-                        <p class="mb-0 aw">{{ order.delivery_cost }}</p>
+                        <p class="mb-0 aw">${{ order.delivery_cost }}</p>
                     </div>
                 </div>
 
@@ -218,7 +234,7 @@
                         <p class="mb-0 aw ">Grand Total:</p>
                     </div>
                     <div class="col-12 col-md-8 text-right">
-                        <p class="mb-0 aw">{{ order.grand_total }}</p>
+                        <p class="mb-0 aw"><span class="underline ">${{ order.grand_total }}</span></p>
                     </div>
 
                 </div>
