--- a/templates/products/products.html
+++ b/templates/products/products.html
@@ -27,8 +27,8 @@
             <div class="row justify-content-center">
 
                 <ul class="nav aw text-bk">
-                    <li class="nav-item dropdown ">
-                        <a class="logo-font font-weight-bold nav-link text-grn mr-5" href="#" id="all-products-link"
+                    <li class="nav-item dropdown center">
+                        <a class="logo-font font-weight-bold nav-link text-grn  mr-3" href="#" id="all-products-link"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             All Products
                         </a>
@@ -41,8 +41,8 @@
                             <a href="{% url 'products' %}" class="dropdown-item">All Products</a>
                         </div>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="logo-font font-weight-bold nav-link text-red mr-5" href="#" id="activewear-link"
+                    <li class="nav-item dropdown center">
+                        <a class="logo-font font-weight-bold nav-link text-red  mr-3" href="#" id="activewear-link"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Activewear & EQP
                         </a>
@@ -57,8 +57,8 @@
                                 class="dropdown-item">All</a>
                         </div>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="logo-font font-weight-bold nav-link text-blue mr-5" href="#" id="supplements-link"
+                    <li class="nav-item dropdown center">
+                        <a class="logo-font font-weight-bold nav-link text-blue mr-3" href="#" id="supplements-link"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Supplements
                         </a>
@@ -72,8 +72,9 @@
                                 Supplements</a>
                         </div>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="logo-font font-weight-bold nav-link text-ylw" href="#" id="specials-link"
+
+                    <li class="nav-item dropdown center">
+                        <a class="logo-font font-weight-bold nav-link text-ylw  mr-3" href="#" id="specials-link"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Special Offers
                         </a>
