--- a/templates/blog/blog_list.html
+++ b/templates/blog/blog_list.html
@@ -40,11 +40,11 @@
                                 {{ blog.category }}</small></a>
                         <p class="card-text">{{ blog.content|safe|truncatechars:200 }}</p>
                         <div class="row m-1">
-                            <div class="col-md-4 col-sm-12"><span><i class="fad fa-eye"></i>
+                            <div class="col-md-4"><span><i class="fad fa-eye"></i>
                                     {{ blog.get_view_count }}</span></div>
-                            <div class="col-md-4 col-sm-12"><span><i class="fad fa-thumbs-up"></i>
+                            <div class="col-md-4"><span><i class="fad fa-thumbs-up"></i>
                                     {{ blog.get_like_count }}</span><br></div>
-                            <div class="col-md-4 col-sm-12"><span><i class="fad fa-comments-alt"></i>
+                            <div class="col-md-4"><span><i class="fad fa-comments-alt"></i>
                                     {{ blog.get_comment_count }}</span></div>
                         </div>
             </a>
