--- a/templates/account/email_confirm.html
+++ b/templates/account/email_confirm.html
@@ -11,22 +11,24 @@
     <div class="container about">
         <div class="overlay">
             <div class="col p-4">
-                <p class="text-grn aw display-3 text-center">Confirm E-mail Address</p>
-                <h1>{% trans "Confirm E-mail Address" %}</h1>
+                <p class="text-grn aw display-3 text-center">{% trans "Confirm E-mail Address" %}</p>
+
 
                 {% if confirmation %}
 
                 {% user_display confirmation.email_address.user as user_display %}
 
-                <p>{% blocktrans with confirmation.email_address.email as email %}Please confirm that <a
-                        href="mailto:{{ email }}">{{ email }}</a> is an e-mail address for user
+                <p class="text-wht text-center" {% blocktrans with confirmation.email_address.email as email %}Please
+                    confirm that <a href="mailto:{{ email }}">{{ email }}</a> is an e-mail address for user
                     {{ user_display }}.{% endblocktrans %}</p>
+                <div class="my-2 row justify-content-center ">
 
-                <form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
-                    {% csrf_token %}
-                    <button type="submit">{% trans 'Confirm' %}</button>
-                </form>
+                    <form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
+                        {% csrf_token %}
+                        <button class="aw btn btn-success px-5" type="submit">{% trans 'Confirm' %}</button>
+                    </form>
 
+                </div>
                 {% else %}
 
                 {% url 'account_email' as email_url %}
