--- a/templates/memberships/membership_list.html
+++ b/templates/memberships/membership_list.html
@@ -27,19 +27,19 @@
                 <h1
                     class="text-center aw {% if not forloop.counter|divisibleby:2  %} text-grn {% else %} text-ylw {% endif %} ">
                     {{ object.membership_type }}</h1>
-                <p class="text-center aw text-wht">Price: ${{ object.price }}<small>/month</small></p>
+                <p class="text-center text-wht">Price: ${{ object.price }}<small>/month</small></p>
                 <h4 class="text-center aw text-wht">Inclueds</h4>
                 <h5 class="aw text-wht">User DashBoard</h5>
                 <h5 class="aw text-wht">Blogs:</h5>
                 <ul>
-                    <li class="aw text-wht">Writing blogs</li>
-                    <li class="aw text-wht">Blogs comments</li>
+                    <li class=" text-wht">Writing blogs</li>
+                    <li class=" text-wht">Blogs comments</li>
                 </ul>
                 <h5 class="aw text-wht">Focus Programs</h5>
                 <ul>
 
                     {% for program in object.program_set.all %}
-                    <li class="aw text-wht">{{ program.title }}</li>
+                    <li class="text-wht">{{ program.title }}</li>
 
                     {% endfor %}
                 </ul>
@@ -59,7 +59,7 @@
                     <input type="hidden" name="membership_type" value="{{ object.membership_type }}">
                 </form>
                 {% else %}
-
+                <p class="text-center aw text-wht">Your Currnet Membership</p>
                 {% endif %}
 
             </div>
